# Qt-Gitpod-Test

./: .gitpod.Dockerfile  .gitpod.yml  CMakeLists.txt  main.cpp
